[package]
name = "astlib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A libary for auto-generating and manipulating abstract syntax trees (AST), independent of any particular parser generator/framework."
keywords = ["asdl", "parsing"]
repository = "https://github.com/DuckLogic/rust-astlib"

[dependencies]
derivative = "2"
serde = { version = "1", optional = true, features = ["derive"] }
codespan = { version = "0.11", optional = true }
inherent = "1"
lexpr = { version = "0.2" }
# Used for Ident
kstring = { version = "1", optional = true }
# Used for float
ordered-float = "2"

[features]
default = ["builtins"]
builtins = ["kstring"]
serde1 = ["serde", "kstring/serde"]

[workspace]
members = ["lib/*"]

[dev-dependencies]
derivative = "2"
serde = { version = "1", features = ["derive"] }